<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_champ"
            android:icon="@drawable/ic_menu_champs"
            android:iconTint="@color/white"
            android:title="@string/champions_menu" />

        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_menu_items"
            android:iconTint="@color/white"
            android:title="@string/items" />

        <item
            android:id="@+id/nav_runes"
            android:icon="@drawable/ic_menu_runes"
            android:iconTint="@color/white"
            android:title="@string/runes" />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
        <item
            android:enabled="false"
            android:icon="@null"
            android:title="" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_version_info"
            android:iconTint="@color/white"
            android:title="@string/info" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:iconTint="@color/white"
            android:title="@string/settings" />
    </group>
</menu>